--- a/SoundLabSocial/Views/Shared/_Layout.cshtml
+++ b/SoundLabSocial/Views/Shared/_Layout.cshtml
@@ -22,9 +22,13 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <li>@Html.ActionLink("Playlists", "Index", "Playlist")</li>
+                        <li>@Html.ActionLink("Songs", "Index", "Song")</li>
+                        <li>@Html.ActionLink("Personal Audio", "Index", "PersonalAudio")</li>
+                    }
+                    </ul>
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
