added views and service methods to get all tables by their ids. ran into issue. troubleshooting

--- a/SoundLabSocial/Views/Playlist/Index.cshtml
+++ b/SoundLabSocial/Views/Playlist/Index.cshtml
@@ -41,9 +41,9 @@
                 @Html.DisplayFor(modelItem => item.CreatedUTC)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "Edit", new {  id=item.PlaylistId }) |
+                @Html.ActionLink("Details", "Details", new {  id=item.PlaylistId  }) |
+                @Html.ActionLink("Delete", "Delete", new {  id=item.PlaylistId  })
             </td>
         </tr>
     }
