--- a/SoundLabSocial/Views/Song/Index.cshtml
+++ b/SoundLabSocial/Views/Song/Index.cshtml
@@ -59,9 +59,9 @@
                     @Html.DisplayFor(modelItem => item.CreatedUTC)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                    @Html.ActionLink("Edit", "Edit", new {  id=item.SongId  }) |
+                    @Html.ActionLink("Details", "Details", new {  id=item.SongId  }) |
+                    @Html.ActionLink("Delete", "Delete", new {  id=item.SongId  })
                 </td>
             </tr>
         }
