--- a/SoundLabSocial/Views/Song/Edit.cshtml
+++ b/SoundLabSocial/Views/Song/Edit.cshtml
@@ -15,13 +15,7 @@
         <h4>SongEdit</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.SongId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.SongId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.SongId, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        @Html.HiddenFor(model => model.SongId)
 
         <div class="form-group">
             @Html.LabelFor(model => model.SongName, htmlAttributes: new { @class = "control-label col-md-2" })
