changed index views text to reflect my project...no longer .net filler text. more to do

--- a/SoundLabSocial/Views/Home/Index.cshtml
+++ b/SoundLabSocial/Views/Home/Index.cshtml
@@ -1,31 +1,39 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Sound Lab Social";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Find New Music...Share Old Memories</h1>
+    <p class="lead">We really like music. Like, a lot! But the crap they play on the radio is...ugh.</p>
+    <p><a href="https://open.spotify.com/playlist/0zgp1QLPlx5Ph2cX8QU4io" class="btn btn-primary btn-lg" target="_blank">Awesome Sample Playlist &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Think About It</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            The oldies station has over 100 years of music to choose from, but insists on playing the same 30 songs on repeat. If we hear 'Back In Black' or 'Rocketman' one more time we're gonna lose it. 
+            Good Songs + Mindless Repition = Bad Songs. It's science!
         </p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+        <h2>Here At Sound Lab</h2>
+        <p>
+            We believe good music should not be hard to find. So, we went out of our way to make it easy for you! Now, you can share new music through your own custom built playlists or let us build a playlist for you. 
+            We promise it'll be good! However, if you don't like it, we would like to give you a money back guarantee, but that's not currently in our budget. Maybe next year!
+        </p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+        <h2>Make It Personal</h2>
+        <p>
+            Do you remember the first time you heard a song that got you through a tough time? Or maybe the song you heard, didn't know, but had to know, so you Shazamed it as fast 
+            as you could?! Yeah, we know there are millions of those memories just waiting to be told. Sound Lab Social was created with this in mind. We want to share great music, 
+            but also the personal stories behind the music so we created a way to make this happen! Record personal audio of the music included in your playlist and the memories tied to them. 
+            Attach these recordings to your playlists and share them with friends. 
+            Not only
+        </p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
