continued front end work

--- a/SoundLabSocial/Views/Home/Index.cshtml
+++ b/SoundLabSocial/Views/Home/Index.cshtml
@@ -20,17 +20,18 @@
     <div class="col-md-4">
         <h2>Here At Sound Lab</h2>
         <p>
-            We believe good music should not be hard to find. So, we went out of our way to make it easy for you! Now, you can share new music through your own custom built playlists or let us build a playlist for you. 
-            We promise it'll be good! However, if you don't like it, we would like to give you a money back guarantee, but that's not currently in our budget. Maybe next year!
+            We believe good music shouldn't be hard to find. So, we went out of our way to make it easy for you! Now, you can share new music through your own custom built playlists or 
+            by letting us build playlists for you. We promise it'll be good! However, if you don't like our playlists, we'd like to give you a money back guarantee, but that's not currently in our budget. 
+            Maybe next year!
         </p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Make It Personal</h2>
         <p>
-            Do you remember the first time you heard a song that got you through a tough time? Or maybe the song you heard, didn't know, but had to know, so you Shazamed it as fast 
+            Do you remember the first time you heard a song that got you through a tough time? Or maybe that song you heard, didn't know, but had to know, so you Shazamed it as fast 
             as you could?! Yeah, we know there are millions of those memories just waiting to be told. Sound Lab Social was created with this in mind. We want to share great music, 
-            but also the personal stories behind the music so we created a way to make this happen! Record personal audio of the music included in your playlist and the memories tied to them. 
+            but also the personal stories behind the music. So, we created a way to make this happen! Record personal audio of the music included in your playlist and the memories tied to them. 
             Attach these recordings to your playlists and share them with friends. 
             Not only
         </p>
