--- a/SoundLabSocial/Views/Playlist/Index.cshtml
+++ b/SoundLabSocial/Views/Playlist/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<SoundLabSocial.Models.PlaylistListItem>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Playlists";
 }
 
-<h2>Index</h2>
+<h2>Playlists</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
