--- a/SoundLabSocial/Views/PersonalAudio/Index.cshtml
+++ b/SoundLabSocial/Views/PersonalAudio/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<SoundLabSocial.Models.PersonalAudioListItem>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Personal Audio";
 }
 
-<h2>Index</h2>
+<h2>Memories</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
