--- a/SoundLabSocial/Views/Song/Index.cshtml
+++ b/SoundLabSocial/Views/Song/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<SoundLabSocial.Models.SongListItem>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Songs";
 }
 
-<h2>Index</h2>
+<h2>Songs</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
