--- a/SoundLabSocial/Views/Song/Delete.cshtml
+++ b/SoundLabSocial/Views/Song/Delete.cshtml
@@ -1,14 +1,13 @@
 ﻿@model SoundLabSocial.Models.SongDetail
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Song";
 }
 
-<h2>Delete</h2>
+<h2>Delete Song</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this song?</h3>
 <div>
-    <h4>SongDetail</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -73,8 +72,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Confirm Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to Song List", "Index")
         </div>
     }
 </div>
