--- a/SoundLabSocial/Views/Song/Details.cshtml
+++ b/SoundLabSocial/Views/Song/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model SoundLabSocial.Models.SongDetail
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Song Details";
 }
 
-<h2>Details</h2>
+<h2>Song Details</h2>
 
 <div>
-    <h4>SongDetail</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -69,6 +68,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new {  id = Model.SongId  }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit Song", "Edit", new {  id = Model.SongId  }) |
+    @Html.ActionLink("Back to Song List", "Index")
 </p>
