--- a/SoundLabSocial/Views/Song/Edit.cshtml
+++ b/SoundLabSocial/Views/Song/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SoundLabSocial.Models.SongEdit
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Song";
 }
 
-<h2>Edit</h2>
+<h2>Edit Song</h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>SongEdit</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.SongId)
@@ -58,7 +57,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Song List", "Index")
 </div>
 
 @section Scripts {
