--- a/SoundLabSocial/Views/Song/Index.cshtml
+++ b/SoundLabSocial/Views/Song/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Songs</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New Song", "Create")
 </p>
 
 @if (TempData.ContainsKey("SaveResult"))
