continued front end work - personal audio CRUD view tweaks

--- a/SoundLabSocial/Views/PersonalAudio/Create.cshtml
+++ b/SoundLabSocial/Views/PersonalAudio/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SoundLabSocial.Models.PersonalAudioCreate
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Personal Audio";
 }
 
-<h2>Create</h2>
+<h2>Create Personal Audio</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>PersonalAudioCreate</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -32,7 +31,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Personal Audio List", "Index")
 </div>
 
 @section Scripts {
