--- a/SoundLabSocial/Views/PersonalAudio/Index.cshtml
+++ b/SoundLabSocial/Views/PersonalAudio/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Memories</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New Personal Audio", "Create")
 </p>
 
 @if (TempData.ContainsKey("SaveResult"))
