--- a/SoundLabSocial/Views/Song/Create.cshtml
+++ b/SoundLabSocial/Views/Song/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SoundLabSocial.Models.SongCreate
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Song";
 }
 
-<h2>Create</h2>
+<h2>Create Song</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>SongCreate</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -56,7 +55,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Song List", "Index")
 </div>
 
 @section Scripts {
