--- a/SoundLabSocial/Views/PersonalAudio/Details.cshtml
+++ b/SoundLabSocial/Views/PersonalAudio/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model SoundLabSocial.Models.PersonalAudioDetail
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Personal Audio Details";
 }
 
-<h2>Details</h2>
+<h2>Personal Audio Details</h2>
 
 <div>
-    <h4>PersonalAudioDetail</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -45,6 +44,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new {  id = Model.AudioId  }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit Personal Audio", "Edit", new {  id = Model.AudioId  }) |
+    @Html.ActionLink("Back to Personal Audio List", "Index")
 </p>
