--- a/SoundLabSocial/Views/PersonalAudio/Edit.cshtml
+++ b/SoundLabSocial/Views/PersonalAudio/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SoundLabSocial.Models.PersonalAudioEdit
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Personal Audio";
 }
 
-<h2>Edit</h2>
+<h2>Edit Personal Audio</h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,6 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>PersonalAudioEdit</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.AudioId)
@@ -34,7 +33,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Personal Audio List", "Index")
 </div>
 
 @section Scripts {
