--- a/SoundLabSocial/Views/Song/Details.cshtml
+++ b/SoundLabSocial/Views/Song/Details.cshtml
@@ -65,6 +65,13 @@
             @Html.DisplayFor(model => model.ModifiedUTC)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.PlaylistId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PlaylistId)
+        </dd>
     </dl>
 </div>
 <p>
