--- a/SoundLabSocial/Views/PersonalAudio/Details.cshtml
+++ b/SoundLabSocial/Views/PersonalAudio/Details.cshtml
@@ -10,11 +10,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.AudioId)
+            @Html.DisplayNameFor(model => model.PersonalAudioId)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.AudioId)
+            @Html.DisplayFor(model => model.PersonalAudioId)
         </dd>
 
         <dt>
@@ -23,6 +23,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.AudioName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.AudioMessage)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.AudioMessage)
         </dd>
 
         <dt>
@@ -44,6 +52,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit Personal Audio", "Edit", new {  id = Model.AudioId  }) |
+    @Html.ActionLink("Edit Personal Audio", "Edit", new {  id = Model.PersonalAudioId  }) |
     @Html.ActionLink("Back to Personal Audio List", "Index")
 </p>
