--- a/SoundLabSocial/Views/PersonalAudio/Edit.cshtml
+++ b/SoundLabSocial/Views/PersonalAudio/Edit.cshtml
@@ -14,13 +14,29 @@
 <div class="form-horizontal">
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.AudioId)
+    @Html.HiddenFor(model => model.PersonalAudioId)
 
     <div class="form-group">
         @Html.LabelFor(model => model.AudioName, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.AudioName, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.AudioName, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.AudioMessage, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.AudioMessage, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.AudioMessage, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.PlaylistId, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.EditorFor(model => model.PlaylistId, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.PlaylistId, "", new { @class = "text-danger" })
         </div>
     </div>
 
