--- a/SoundLabSocial/Views/Song/Delete.cshtml
+++ b/SoundLabSocial/Views/Song/Delete.cshtml
@@ -66,6 +66,14 @@
             @Html.DisplayFor(model => model.ModifiedUTC)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.PlaylistId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PlaylistId)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
