--- a/SoundLabSocial/Views/Song/Index.cshtml
+++ b/SoundLabSocial/Views/Song/Index.cshtml
@@ -37,34 +37,40 @@
         <th>
             @Html.DisplayNameFor(model => model.CreatedUTC)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.PlaylistId)
+        </th>
         <th></th>
     </tr>
 
     @foreach (var item in Model)
     {
-        <tr>
-            @Html.HiddenFor(modelItem => item.SongId)
-            <td>
-                @Html.DisplayFor(modelItem => item.SongName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SongArtist)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SongAlbum)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ReleaseYear)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.CreatedUTC)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.SongId }) |
-                @Html.ActionLink("Details", "Details", new { id = item.SongId }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.SongId })
-            </td>
-        </tr>
+<tr>
+    @Html.HiddenFor(modelItem => item.SongId)
+    <td>
+        @Html.DisplayFor(modelItem => item.SongName)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.SongArtist)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.SongAlbum)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.ReleaseYear)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.CreatedUTC)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.PlaylistId)
+    </td>
+    <td>
+        @Html.ActionLink("Edit", "Edit", new { id = item.SongId }) |
+        @Html.ActionLink("Details", "Details", new { id = item.SongId }) |
+        @Html.ActionLink("Delete", "Delete", new { id = item.SongId })
+    </td>
+</tr>
     }
 
 </table>
