went through each view and added/changed/deleted terminology to match project goals. styling is next

--- a/SoundLabSocial/Views/Playlist/Details.cshtml
+++ b/SoundLabSocial/Views/Playlist/Details.cshtml
@@ -134,6 +134,6 @@
     </table>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new {  id = Model.PlaylistId  }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edit Playlist", "Edit", new {  id = Model.PlaylistId  }) |
+    @Html.ActionLink("Back to Playlist List", "Index")
 </p>
