--- a/SoundLabSocial/Views/PersonalAudio/Details.cshtml
+++ b/SoundLabSocial/Views/PersonalAudio/Details.cshtml
@@ -49,6 +49,14 @@
             @Html.DisplayFor(model => model.ModifiedUTC)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.PlaylistId)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PlaylistId)
+        </dd>
+
     </dl>
 </div>
 <p>
