--- a/SoundLabSocial/Views/Playlist/Create.cshtml
+++ b/SoundLabSocial/Views/Playlist/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SoundLabSocial.Models.PlaylistCreate
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Create Playlist";
 }
 
-<h2>Create</h2>
+<h2>Create Playlist</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>PlaylistCreate</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -25,14 +24,14 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create Playlist" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Playlist List", "Index")
 </div>
 
 @section Scripts {
