--- a/SoundLabSocial/Views/Playlist/Delete.cshtml
+++ b/SoundLabSocial/Views/Playlist/Delete.cshtml
@@ -1,14 +1,13 @@
 ﻿@model SoundLabSocial.Models.PlaylistDetail
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Delete Playlist";
 }
 
-<h2>Delete</h2>
+<h2>Delete Playlist</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this playlist?</h3>
 <div>
-    <h4>PlaylistDetail</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -49,8 +48,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            <input type="submit" value="Confirm Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to Playlist List", "Index")
         </div>
     }
 </div>
