--- a/SoundLabSocial/Views/Playlist/Edit.cshtml
+++ b/SoundLabSocial/Views/Playlist/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model SoundLabSocial.Models.PlaylistEdit
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Playlist";
 }
 
-<h2>Edit</h2>
+<h2>Edit Playlist</h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>PlaylistEdit</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.PlaylistId)
@@ -34,7 +33,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Playlist List", "Index")
 </div>
 
 @section Scripts {
