--- a/SoundLabSocial/Views/Playlist/Index.cshtml
+++ b/SoundLabSocial/Views/Playlist/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Playlists</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New Playlist", "Create")
 </p>
 
 @if (TempData.ContainsKey("SaveResult"))
