--- a/SoundLabSocial/Views/Song/Create.cshtml
+++ b/SoundLabSocial/Views/Song/Create.cshtml
@@ -56,7 +56,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" />
+            <input type="submit" value="Create Song" class="btn btn-default" />
         </div>
     </div>
 </div>
